PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Jan 2004, Version 4.3.5
- Fixed bug #26937 (Warning in xml.c). (Jani)
- Fixed Bug #26927 (preg_quote() does not escape \0). (Ilia)
- Fixed bug #26909 (crash in imap_mime_header_decode() when no encoding is 
  used). (Ilia)
- Fixed bug #26892 (ORA-21301 in ocinewcollection() call). (Antony)
- Fixed bug #26878 (problem with multiple references to the same variable 
  with different types). (Ilia)
- Fixed bug #26896 (ext/ftp does not work as shared extension). (Jani)
- Fixed bug #26772 (fgets returns NULL instead of FALSE). (Wez)

12 Jan 2004, Version 4.3.5RC1
- Synchronized bundled GD library with GD 2.0.17
- Upgraded PCRE library to version 4.5. (Andrei)
- Updated bundled PostgreSQL library to version 7.4 in Windows distribution.
  (Edin)
- Added support for --program-prefix and --program-suffix configure options.
  (Jani)
- Added a warning when creating temp stream fails with ftp_(n)list(). (Sara)
- Fixed header handler in NSAPI SAPI module (header->replace was ignored,
  send_default_content_type now sends value from php.ini). (Uwe Schindler)
- Fixed bug #26864 (pg_(update|delete) ignore PGSQL_DML_EXEC option). (Ilia)
- Fixed bug #26847 (memory leak in mail() when to/subject contain only spaces).
  (Ilia)
- Fixed bug #26777 (ext/interbase: Let DB handle NULL params). (Ard)
- Fixed bug #26755 (CLI now overrides php.ini settings and switches off
  output buffering). (Edin)
- Fixed bug #26752 (Silent unterminated loop when length parameter for
  fgets(), fread() and fgetss() is 0). (Ilia)
- Fixed bug #26751 (PHP can't find the MySQL socket on a case sensitive file
  system). (Derick)
- Fixed Bug #26703 (Certain characters inside strings incorrectly treated as
  keywords). (vrana [at] php [dot] net, Ilia)
- Fixed bug #26667 (Added safety checks to ip2long()). (Ilia)